<resources>
    <string name="app_name">じゃんけん_viewBinding_Kt</string>
    <string name="main">Main Activity</string>
    <string name="move">MOVE</string>
    <string name="result">Result</string>
    <string name="finalResult">FinalResult</string>
    <string name="halfwayProgress">HalfwayProgress</string>
    <string name="title">Title</string>
    <string name="return_sub">RETURN</string>
    <string name="select">Select</string>
    <string name="overallScore">%1s勝ち%2s負け%3s引き分け</string>
    <string name="signal_of_fight">じゃーんけーん...</string>
    <string name="todo">TODO</string>
    <string name="tap_the_image">画像をタップしてね</string>
    <string name="result_announcement">結果発表！！</string>
    <string name="win_num">勝った数:0</string>
    <string name="lose_num">負けた数:0</string>
    <string name="draw_num">引き分け数:0</string>
    <string name="toTitle">タイトルへ</string>
    <string name="halfway_progress">途中経過......</string>
    <string name="now_game_num">戦目だよ</string>
    <string name="next_fight">次の対戦へ</string>
    <string name="enemy">相手</string>
    <string name="you">あなた</string>
    <string name="next_scene">次のシーンへ</string>
    <string name="start">スタート</string>
    <string name="brute_force_rule">1.対戦形式は任意で1～10まで対戦出来ます \n2.対戦は勝敗に問わずカウントします \n3.設定した値まで終了しません \n4.結果は総合的に判定します</string>
    <string name="rule_explanation">ルール説明</string>
    <string name="fight_num">回数：1</string>
    <string name="brute_force">総当たり戦</string>
    <string name="battle_format">対戦形式</string>
    <string name="war_record">0勝ち0負け0引き分け</string>
    <string name="reset_button">RESET BUTTON</string>
    <string name="enemy_lines">僕と勝負だ！！</string>
</resources>